fix: fix extraneous spacings between image and image container 'app.scss'

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -380,7 +380,7 @@ input {
 
   img {
     width: 100%;
-    object-fit: scale-down;
+    object-fit: contain;
     margin-bottom: calc(#{$container-spacing} * 0.75);
   }
 
